tests/errors/sem_call3.java
public class sem_call3 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(3 , 10 , i);
}
}